--- a/_posts/2023-03-31-test.md
+++ b/_posts/2023-03-31-test.md
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: posts
 title: "스프링 첫번째 포스팅"
 categories: Java
 tag: [Spring, 김영한, 기본]
@@ -8,5 +8,5 @@ sidebar:
   nav: "counts"
 ---
 
-<div class="notice--success">혹시나 잘못된 개념 전달이 있다면 댓글 부탁드립니다. 
-저의 성장에 큰 도움이 됩니다</div>
+객체지향
+
