--- a/_posts/2023-03-31-test.md
+++ b/_posts/2023-03-31-test.md
@@ -1,11 +1,22 @@
 ---
-layout: posts
+layout: single
 title: "스프링 첫번째 포스팅"
 categories: Java
 tag: [Spring, 김영한, 기본]
 author_profile: false
+toc: true
+toc_sticky: true
+toc_label: 목차
 sidebar:
   nav: "counts"
 ---
 
-객체지향
+# 객체지향
+
+## 1
+
+### 1
+
+## 2
+
+### 1
