객체지향 포스팅

--- a/_posts/2023-03-31-test.md
+++ b/_posts/2023-03-31-test.md
@@ -11,7 +11,104 @@ sidebar:
   nav: "counts"
 ---
 
-# 객체지향
+# 객체지향 설계의 5원칙
+
+#### 객체 지향이란?
+
+ 현실에 존재하는 사물을 있는 그대로 모델링하여, 이들의 속성과 행위를 정의하고, 절차적이 아닌, 객체가 중심이 되어 실제 사물이 동작하는 방식으로 설계하는 것
+
+
+
+#### 객체 설계하는 방법. 
+
+1. 객체의 3가지 요소
+
+   - 상태 유지  (객체의 상태)
+     - 객체는 상태 정보를 저장하고, 유지되어져야하며 이러한 속성 (Variable)은 변수로 정의 되어져야 한다. 
+     - 이러한 속성값이 바뀜으로 인하여, 객체의 상태가 변경될 수 있어야 한다. 
+   - 기능 제공 (객체의 책임)
+     - 객체는 기능을 제공해야 한다. (Method 의 제공)
+     - 캡슐화와의 연관이 있는데, 외부로 부터 직접 속성에 접근하여 변경하는 것이 아닌 객체가 제공하는 Method로 속성이 변경되는 기능이 제공되어져야 한다. 
+   - 고유 식별자 제공 (객체의 유일성)
+     - 각각의 객체는 고유한 식별자를 가져야 한다. 
+     - 이후 DB에서 Unique Key, Primary Key 로도 작성이 가능하다.  
+
+2. 물리 객체와 개념 객체
+
+   - 물리 객체 
+
+     - 실제로 사물이 존재하며, 이를 클래스로 정의한 객체
+     - 급여 관리 시스템 : 직원, 월급통장 등등
+
+   - 개념 객체
+
+     - 개발한 웹 시스템에서 Service에 해당된다. 
+     - business logic을 처리하는 부분으로 여러 객체를 상호작용 하도록 하며, 객체가 제공하는 오퍼레이션 method를 통하여 객체의 속성을 변경 시킨다. 
+     - 사용자 관리 시스템 : 사용자 객체의 마지막 접속일자를 이용하여, 계정 만료, 비밀번호 초기화, 재등록 처리 등등
+
+   -  객체지향에서의 대부분의 프로그래밍은 각 객체에 기능을 정의하고 이를 business logic을 처리하는 Service에서 객체의 Method를 이용하여 , 여러 가지 조건을 확인하여, 객체의 속성을 변경하는 작업이 된다. 
+
+     ​	이러한 작업을 하기 위해서는 각 객체의 속성을 변경하거나 상태를 변경할 수 있는 오퍼레이션(Method)을 잘 정의해야한다.
+
+
+
+####  객체 지향 설계의 5 원칙
+
+1. 응집도와 결합도
+
+   좋은 소프트웨어 설계를 위해서는 결합도는 낮추고 응집도는 높여야 한다. 
+
+   - 결합도 
+
+     A,B,C 라는 클래스가 있다. 
+
+     A<-B<-C  의존 결합도가 올라간다. 
+
+     A클래스를 수정하면 B도 수정해야하고, C도 수정해야한다. 
+
+     이렇게 결합도가 높아지게 되면 모듈간의 상호 의존성이 높아져 객체의 재사용 및 유지보수가 어려워진다. 
+
+   - 응집도
+
+     하나의 모듈 내부에 존재하는 구성 요소들의 기능적 관련성을 말한다. 
+
+     응집도가 높은 모듈은 하나의 책임에 집중하고 독립성이 높아져, 재사용 및 유지보수가 용이하다. 
+
+​	
+
+
+
+#### SRP(Single Responsibility Principle) 단일 책임 원칙
+
+어떠한 클래스를 변경하는 이유는 한가지 뿐이여야 한다. 
+
+
+
+
+
+
+
+FTP Client라는 클래스가 있다.
+
+network 기능,file 읽어로는 기능 file 쓰는 기능 존재.. 
+
+이런 기능을 쓰기 위해 외부 클래스가 해당 기능들을 참조하고 있다고 하자. 
+
+만약 file리더를 문자열로 받다가 파일이라는 클래스를 받는 것으로 변경한 다고 할때  
+
+외부의 fileReader도 수정이 되어야 정상적인 동작을 한다. 
+
+지금 위의 클라이언트는 너무 많은 기능을 갖고있다. 
+
+
+
+
+
+
+
+
+
+
 
 ## 1
 
