--- a/_posts/2023-03-31-test.md
+++ b/_posts/2023-03-31-test.md
@@ -15,7 +15,7 @@ sidebar:
 
 #### 객체 지향이란?
 
- 현실에 존재하는 사물을 있는 그대로 모델링하여, 이들의 속성과 행위를 정의하고, 절차적이 아닌, 객체가 중심이 되어 실제 사물이 동작하는 방식으로 설계하는 것
+ 현실에 존재하는 사물을 있는 그대로 모델링하여, 이들의 속성과 행위를 정의하고, 절차가 아닌, 객체가 중심이 되어 실제 사물이 동작하는 방식으로 설계하는 것
 
 
 
@@ -66,54 +66,312 @@ sidebar:
 
      A클래스를 수정하면 B도 수정해야하고, C도 수정해야한다. 
 
-     이렇게 결합도가 높아지게 되면 모듈간의 상호 의존성이 높아져 객체의 재사용 및 유지보수가 어려워진다. 
+     이렇게 결합도가 높아지게 되면 클래스간의 상호 의존성이 높아져 객체의 재사용 및 유지보수가 어려워진다. 
 
    - 응집도
 
-     하나의 모듈 내부에 존재하는 구성 요소들의 기능적 관련성을 말한다. 
+     하나의 클래스 내부에 존재하는 구성 요소들의 기능적 관련성을 말한다. 
 
-     응집도가 높은 모듈은 하나의 책임에 집중하고 독립성이 높아져, 재사용 및 유지보수가 용이하다. 
+     응집도가 높은 클래스는 하나의 책임에 집중하고 독립성이 높아져, 재사용 및 유지보수가 용이하다. 
 
-​	
+###   
 
-
-
-#### SRP(Single Responsibility Principle) 단일 책임 원칙
+## 단일 책임 원칙(SRP)
 
 어떠한 클래스를 변경하는 이유는 한가지 뿐이여야 한다. 
 
+주문을 처리하는 클래스가 있다.
+
+주문이 올바르게 형성되면, 주문을 데이터베이스에 저장하고 주문을 확인하기 위해 이메일을 보낸다. 
+
+```java
+public class OrderProcessor {
+
+    public void process(Order order){
+        if (order.isValid() && save(order)) {
+            sendConfirmationEmail(order);
+        }
+    }
+
+    private boolean save(Order order) {
+        MySqlConnection connection = new MySqlConnection("database.url");
+        return true;
+    }
+
+    private void sendConfirmEmail(Order order) {
+        String name = order.getCustomerName();
+        String email = order.getCustomerEmail();
+    }
+}
+```
+
+이 클래스는 세 가지 이유로 변경된다. 
+
+1. 주문 처리 로직의 변경
+2. 주문 저장 방식(데이터베이스 유형)의 변경
+3. 주문 확인 전송 방법의 변경. (예: 이메일-> 카톡 메시지를 보내야 한다고 가정)
+
+단일 책임 원칙은 이 문제의 세 가지 측면이 실제로 세 가지 다른 책임이라는 것을 말한다. 
+그러므로 서로 다른 클래스 또는 클래스에 있어야 한다.
+다른 시간에 다른 이유로 변경될 수 있는 여러 엔터티를 결합하는 것은 잘못된 설계 결정이다. 
+클래스를 각각 단일 기능을 수행하는 세 개의 개별 클래스로 분할하는 것이 훨씬 좋다. (각 클래스의 응집도를 높여줌)
+
+```java
+public class MySQLOrderRepository {
+    public boolean save(Order order) {
+        MySqlConnection connection = new MySqlConnection("database.url");
+        // Save the order in the database
+
+        return true;
+    }
+}
+
+public class ConfirmationEmailSender {
+    public void sendConfirmationEmail(Order order) {
+        String name = order.getCustomerName();
+        String email = order.getCustomerEmail();
+
+        // Send an email to the customer
+    }
+}
+  
+public class OrderProcessor {
+    public void process(Order order){
+
+        MySQLOrderRepository repository = new MySQLOrderRepository();
+        ConfirmationEmailSender mailSender = new ConfirmationEmailSender();
+
+        if (order.isValid() && repository.save(order)) {
+            mailSender.sendConfirmationEmail(order);
+        }
+    }
+
+}
+```
 
 
 
+## 개방 폐쇄 원칙(OCP)
+
+**소프트웨어 엔터티(클래스, 클래스, 함수 등)는 자신의 확장에는 열려 있어야 하지만 수정(주변의 변화) 에는 닫혀 있어야 한다** . 
+
+상위 클래스 또는 인터페이스를 중간에 둠으로써, 자신은 변화에 대해서 폐쇄적이지만, 인터페이스는 외부의 변화에 대해 확장을 개방해 줄 수 있다. 
+
+JDBC와 Mybatis, Hibernate 등 JAVA에서는 Stream(input.Out)에서 찾아볼 수 있다. 
+
+이는 시스템이 유연해야 하고 소스 코드를 변경하지 않고도 변화하는 조건에서 작업할 수 있어야 함을 의미한다.
+
+주문이 처리되기 전과 확인 이메일이 전송된 후에 몇 가지 작업을 수행해야 한다고 할 때, 
+`OrderProcessor`를 변경하지 않고 개방형 폐쇄 원칙을지키며 클래스 자체를 확장 할 수 있다. 
+
+```java
+public class OrderProcessorWithPreAndPostProcessing extends OrderProcessor {
+
+    @Override
+    public void process(Order order) {
+        beforeProcessing();
+        super.process(order);
+        afterProcessing();
+    }
+
+    private void beforeProcessing() {
+        //주문 처리 전 작업 내용
+    }
+
+    private void afterProcessing() {
+        // 주문 처리 후 작업 내용
+    }
+}
+```
+
+## 리스코프 치환 원칙(LSP)
+
+자식 클래스는 최소한 자신의 부모 클래스에서 가능한 행위는 수행할 수 있어야 한다
+즉, 자식 클래스는 언제나 부모 클래스의 역할을 대체할 수 있어야 한다는 것을 말하며, 부모 클래스와 자식 클래스의 행위가 일관됨을 의미한다.
+
+자식 클래스가 부모 클래스를 대체하기 위해서는 부모의 기능에 대해 오버라이드 되지 않도록 하면 된다.
+즉, **자식 클래스는 부모 클래스의 책임을 무시하거나 재정의하지 않고 확장만 수행**하도록 해야 LSP를 만족하게 되는 것이다. 
 
 
 
-FTP Client라는 클래스가 있다.
+주문의 유효성을 검사하고, 주문에 포함된 모든 상품의 재고가 있는지 확인하는 클래스가 있다.
 
-network 기능,file 읽어로는 기능 file 쓰는 기능 존재.. 
+`isValid()`: *true* 또는 *false를* 반환하는 메서드 
 
-이런 기능을 쓰기 위해 외부 클래스가 해당 기능들을 참조하고 있다고 하자. 
+```java
+public class OrderStockValidator {
 
-만약 file리더를 문자열로 받다가 파일이라는 클래스를 받는 것으로 변경한 다고 할때  
+    public boolean isValid(Order order) {
+        for (Item item : order.getItems()) {
+            if (!item.isInStock()) {
+                return false;
+            }
+        }
 
-외부의 fileReader도 수정이 되어야 정상적인 동작을 한다. 
+        return true;
+    }
+}
+```
 
-지금 위의 클라이언트는 너무 많은 기능을 갖고있다. 
+다른 예로, 일부 주문은  주문에 포함된 모든 상품의 재고가 있는지, **모든 상품이 포장되어 있는지를 확인**해야 한다.`OrderStockValidator`클래스를 확장하여`OrderStockAndPackValidator`를 만들었다. 
 
+```java
+public class OrderStockAndPackValidator extends OrderStockValidator {
 
+    @Override
+    public boolean isValid(Order order) {
+        for (Item item : order.getItems()) {
+            if ( !item.isInStock() || !item.isPacked() ){
+                throw new IllegalStateException(
+                     String.format("Order %d is not valid!", order.getId())
+                );
+            }
+        }
 
+        return true;
+    }
+}
+```
 
+여기서 Liskov 대체 원칙을 위반하게된다.  
 
+왜냐하면 주문이 유효성 검사에 실패하면 *false를*  반환하는 대신 우리 메서드가 throw new IllegalStateException 처리가 되기 때문이다.
+클라이언트는 *true* 또는 *false* 반환 값을 기대하므로 이로 인해 런타임 오류가 발생할 수 있다. 
 
+## ISP(인터페이스 분리 원칙)
 
+**자신이 사용하지 않는 인터페이스는 구현하지 말아야 한다는 설계 원칙*이다. 
+즉, 하나의 거대한 인터페이스 보다는 여러 개의 구체적인 인터페이스가 낫다
 
+**SRP는 객체의 단일 책임을 뜻한다면, ISP는 인터페이스의 단일 책임**을 의미한다.
 
+결과적으로 인터페이스 메서드가 변경되면 해당 메서드를 사용하지 않는 클라이언트는 변경되지 않아야 한다.
 
+예를 들어, 개발자가 "보고서" 인터페이스를 만들고 두 가지 메서드를 추가했다.
 
-## 1
+`generateExcel()`.`generatedPdf()`. 
 
-### 1
+이제 이 인터페이스를 사용하려고 하지만 Excel이 아닌 PDF 형식의 보고서만 사용하려고 한다. .
 
-## 2
+ 이 인터페이스를 사용하기 위해서는 Excel형식의 보고서가 필요하지 않아도 두 가지 방법을 구현해야 합니다.
+이를 해결하기 위해서 기존 인터페이스를 두 개의 작은 인터페이스로 분할하여 필요한 기능만 사용하도록 해야 한다.
 
-### 1
+## 종속성 역전 원칙(DIP)
+
+**시스템 내의 종속성은 추상화를 기반으로 구축된다.**. 상위 수준 클래스는 하위 수준 클래스에 의존하지 않습니다.
+
+ 추상화는 세부 사항에 의존해서는 안 된다.. 
+
+세부 사항은 추상화에 따라 달라지기때문에. 다양한 클래스가 추상화를 통해 서로 연결되도록 소프트웨어를 설계해야 한다.
+Spring Framework에서 모든 클래스는 함께 작동할 수 있는 별도의 구성 요소로 구현된다.
+ 그들은 매우 자율적이어서 Spring Framework 이외의 프로그램 클래스에서도 쉽게 사용할 수 있습니다.
+ 이것은 닫힌 원칙과 열린 원칙의 의존성 덕분에 달성됩니다. 
+모든 클래스는 다른 클래스에서 사용할 수 있는 추상화에 대한 액세스만 제공한다. 
+
+예
+
+```java
+public class OrderProcessor {
+    public void process(Order order){
+
+        MySQLOrderRepository repository = new MySQLOrderRepository();
+        ConfirmationEmailSender mailSender = new ConfirmationEmailSender();
+
+        if (order.isValid() && repository.save(order)) {
+            mailSender.sendConfirmationEmail(order);
+        }
+    }
+
+}
+```
+
+ `OrderProcessor`클래스는 두 개의 특정 클래스인 `MySQLOrderRepository, ConfirmationEmailSender`.에 의존한다. 
+
+또한 다음 클래스도 있다. 
+
+```java
+public class MySQLOrderRepository {
+    public boolean save(Order order) {
+        MySqlConnection connection = new MySqlConnection("database.url");
+        // Save the order in the database
+
+        return true;
+    }
+}
+
+public class ConfirmationEmailSender {
+    public void sendConfirmationEmail(Order order) {
+        String name = order.getCustomerName();
+        String email = order.getCustomerEmail();
+
+        // Send an email to the customer
+    }
+}
+```
+
+이러한 클래스는 우리가 추상화라고 부르는 것과는 거리가 멀다. 
+
+종속성 역전 원칙의 관점에서 보면 구체적인 구현보다는 앞으로 작업할 수 있는 몇 가지 추상화를 만드는 것부터 시작하는 것이 좋다. 
+
+두 개의 인터페이스를 만들어 보자. `MailSender`및 `OrderRepository`. 
+
+```java
+public interface MailSender {
+    void sendConfirmationEmail(Order order);
+}
+
+public interface OrderRepository {
+    boolean save(Order order);
+}
+```
+
+이제 이 인터페이스를 구현해보자. 
+
+```java
+public class ConfirmationEmailSender implements MailSender {
+
+    @Override
+    public void sendConfirmationEmail(Order order) {
+        String name = order.getCustomerName();
+        String email = order.getCustomerEmail();
+
+        // Send an email to the customer
+    }
+
+}
+
+public class MySQLOrderRepository implements OrderRepository {
+
+    @Override
+    public boolean save(Order order) {
+        MySqlConnection connection = new MySqlConnection("database.url");
+        // Save the order in the database
+
+        return true;
+    }
+}
+```
+
+ `OrderProcessor`클래스가 구체적인 구현이 아니라 추상화에 의존하도게 되었다. 
+
+클래스 생성자에 종속성을 추가하여 변경한다. 
+
+```java
+public class OrderProcessor {
+
+    private MailSender mailSender;
+    private OrderRepository repository;
+ㄴㄴerRepository repository) {
+        this.mailSender = mailSender;
+        this.repository = repository;
+    }
+
+    public void process(Order order){
+        if (order.isValid() && repository.save(order)) {
+            mailSender.sendConfirmationEmail(order);
+        }
+    }
+}
+```
+
+이제 우리 클래스는 특정 구현이 아닌 추상화에 의존한다. 개체가 생성 될 때 원하는 종속성을 추가하여 동작을 쉽게 변경할 수 있다.
